--- a/mydjangoproject/templates/index.html
+++ b/mydjangoproject/templates/index.html
@@ -5,6 +5,6 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>My first app created in Djangod</h1>
+    <h1>My first app created in Django</h1>
 </body>
 </html>
